--- a/defaults/init.yml
+++ b/defaults/init.yml
@@ -9,4 +9,4 @@ parameters:
     linux_system_architecture: 'amd64'
     linux_system_repo_url: "http://mirror.mirantis.com/${_param:apt_mk_version}/"
     # Openstack
-    openstack_version: 'pike'
+    openstack_version: 'queens'
